--- a/index.html
+++ b/index.html
@@ -612,17 +612,74 @@
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
 <div class="col-3 col-md-3 pb-3 pb-md-0">
+<img src="assets/images/c-10.png">	
+</div>
+<div class="col-md-6 pb-2 pb-md-0">
+<h5 class="mb-2"><i>Advisor, Rebuilding India Initiative</i></h5>
+<h3 class="">UC Berkeley - NITI Aayog Industry Advisory Council</h3>
+<a target="blank" href="https://haas.berkeley.edu/growth-markets/rebuilding-india-initiative-adivsory-council/?fbclid=IwAR3mnO6Svs1zNGnXc4iukJm-JZj7tbA_K0iwtft8TCXNqoV9usm-nHtHtGU">visit website</a>
+</div>
+<div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
+
+</div>
+</div>
+
+<div class="resume-list b-box p-2 " >
+<div class="row align-items-center">
+<div class="col-3 col-md-3 pb-3 pb-md-0">
+<img src="assets/images/c-09.jpg">	
+</div>
+<div class="col-md-6 pb-2 pb-md-0">
+<h5 class="mb-2"><i>Co-Founder</i></h5>
+<h3 class="">Petonic Infotech Private Limited</h3>
+<p class="text-justify">We provide expert advice to C-level, Management Body & executives of Public &
+Private Sector Companies, Organisation & Societies on their toughest strategic
+issues. </p>
+<a target="blank" href="https://www.petonic.in/">visit website</a>
+</div>
+<div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2018 - Present</h6></div>
+
+</div>
+</div>
+            
+<div class="resume-list b-box p-2 " >
+<div class="row align-items-center">
+<div class="col-3 col-md-3 pb-3 pb-md-0">
+<img src="assets/images/c-no-image.jpg">	
+</div>
+<div class="col-md-6 pb-2 pb-md-0">
+<h5 class="mb-2"><i>Investor</i></h5>
+<h3 class="">GIK2 Solutions</h3>
+<p class="text-justify">Started in late 2019 with a joint venture Xiuxiang Smart (Shenzhen) Co. Ltd.('x2intell'), along with venture backed
+by parent company 'Intex'. Through GIK2 we are focused on system R&D, product and service in wireless IoT
+industry. Driven by the market demands and technical innovation, we created YIO protocol and YuOS wireless IoT
+management system, which have been applied to centralized control lighting and HVAC equipment in large
+commercial spaces such as hospital, hotel, school, mall and so on. With the features of reducing costs and
+optimizing the user experience, the system has become a professional management tool for industries like real
+estate, construction, system integration, etc.
+</p>
+<a target="blank" href="#">visit website</a>
+</div>
+<div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
+
+</div>
+</div>
+
+
+<div class="resume-list b-box p-2 " >
+<div class="row align-items-center">
+<div class="col-3 col-md-3 pb-3 pb-md-0">
 <img src="assets/images/c-03.jpg">	
 </div>
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>CEO, Co-Founder</i></h5>
 <h3 class="">Zenith Vipers Solutions Private Limited</h3>
 <p class="text-justify">Zenith Vipers was founded with a view to encouraging students to come up with
-    ideas and research projects that improve society no matter how young they are. It
-    provides innovative solutions to all real time problems of private sector clients and
-    government sector. The solutions are specifically focused on patents that we
-    outsource to these corporate and government sectors. </p>
-<a href="#">visit website</a>
+ideas and research projects that improve society no matter how young they are. It
+provides innovative solutions to all real time problems of private sector clients and
+government sector. The solutions are specifically focused on patents that we
+outsource to these corporate and government sectors. </p>
+<a target="blank" href="#">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2016 - Present</h6></div>
 
@@ -642,7 +699,7 @@
     transform businesses to ensure a long term return for investors and companies, but
     we don’t work for only value creation, as our bigger motive is to enable create great
     companies which are helping create a better world. </p>
-<a href="#">visit website</a>
+<a target="blank" href="#">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2017 - Present</h6></div>
 
@@ -660,25 +717,23 @@
 <p class="text-justify">To change the trend and mindset of people about research and promote the concept
     of research without a university or college degree. We identify real-time problems
     faced by the State / Market / Society and we solve it. The company is based in Dubai. </p>
-<a href="#">visit website</a>
+<a target="blank" href="#">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2018 - Present</h6></div>
 
 </div>
 </div>
 
+
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
 <div class="col-3 col-md-3 pb-3 pb-md-0">
-<img src="assets/images/c-09.jpg">	
+<img src="assets/images/c-no-image.jpg">	
 </div>
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Co-Founder</i></h5>
-<h3 class="">Petonic Infotech Private Limited</h3>
-<p class="text-justify">We provide expert advice to C-level, Management Body & executives of Public &
-    Private Sector Companies, Organisation & Societies on their toughest strategic
-    issues. </p>
-<a href="#">visit website</a>
+<h3 class=""> Prometheus Solutions Limited (SPV Abu Dhabi Global Market)</h3>
+<a target="blank" vhref="#">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2018 - Present</h6></div>
 
@@ -691,11 +746,21 @@
 <img src="assets/images/c-no-image.jpg">	
 </div>
 <div class="col-md-6 pb-2 pb-md-0">
-<h5 class="mb-2"><i>Co-Founder</i></h5>
-<h3 class=""> Prometheus Solutions Limited (SPV Abu Dhabi Global Market)</h3>
-<a href="#">visit website</a>
+<h5 class="mb-2"><i>Investor</i></h5>
+<h3 class="">Prometheus E-Waste Recycling Solutions</h3>
+<p class="text-justify">Prometheus E-Waste provides comprehensive and complete recycling services to get rid of electronic wastes. It is
+authorised by the Pollution Control Board for handling hazardous waste and e-wastes, and has the technology to
+extract metals from e-waste. Our technology is based on the manual dismantling, segregation and recycling
+method. We use a dry shredding and separating method to extract metals from printed circuit boards. The
+material is granulated to less than 5mm size and in the electrostatic separator, metals and hazardous content are
+completely separated. We don't have emissions from the process in the form of water or dust. Prometheus E- Waste has its recycling facilities in Gwalior, Madhya Pradesh and office in Delhi NCR. The company collects e-waste
+from leading companies across India through contractual procurement. They also buy it from various institutes, organisations and smaller companies on a B2B model. The e-waste collected by the company is segregated and
+usable devices are refurbished. These are then sold through online marketplaces and a dealers’ network. The
+waste that is of no use is broken to extract commodities like copper, aluminium, iron, etc., which are sold to
+foundries, factories that produce metal castings.</p>
+<a target="blank" href="https://www.prometheusrecycling.com/">visit website</a>
 </div>
-<div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2018 - Present</h6></div>
+<div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
 
 </div>
 </div>
@@ -712,7 +777,7 @@
     businesses thrive. Our aim of uplifting the benchmark of work environment in India
     and abroad while ensuring the client's expectations are met which allows them to
     focus on their core business.</p>
-<a href="#">visit website</a>
+<a target="blank" href="http://www.incuspaze.com/">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2016 - 2017</h6></div>
 
@@ -727,7 +792,7 @@
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Co-Founder</i></h5>
 <h3 class="">Workolab Co-working Space</h3>
-<a href="#">visit website</a>
+<a target="blank" href="#">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2017 - Present</h6></div>
 
@@ -742,13 +807,13 @@
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Investor, Advisor</i></h5>
 <h3 class="">Space India</h3>
-<a href="#">visit website</a>
+<a target="blank" href="http://www.space-india.com/">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2017 - Present</h6></div>
 
 </div>
 </div>
-
+<!-- 
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
 <div class="col-3 col-md-3 pb-3 pb-md-0">
@@ -757,12 +822,12 @@
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Investor</i></h5>
 <h3 class="">Prometheus Recycling Private Limited</h3>
-<a href="#">visit website</a>
+<a target="blank" href="#">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
 
 </div>
-</div>
+</div> -->
 
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
@@ -772,7 +837,7 @@
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Investor, Technical Advisor</i></h5>
 <h3 class="">Insta Printz</h3>
-<a href="#">visit website</a>
+<a target="blank" href="http://www.instaprintz.in/">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2017 - Present</h6></div>
 
@@ -783,6 +848,7 @@
 </div>
 </div>
 </div>
+
 
 <div class="section-education">
 <div class="row">
@@ -797,7 +863,7 @@
 <div class="resume-list b-box p-4 mb-4 " >
 <div>
 <h5><i>High School</i></h5>
-<h6 class="badge badge-danger d-inline-block my-3">2014-2015</h6> <span class="ml-3"><a href="#">vist website</a></span>
+<h6 class="badge badge-danger d-inline-block my-3">2014-2015</h6> <span class="ml-3"><a target="blank" href="https://www.indraprasthaschool.com/">vist website</a></span>
 <hr>
 <h3>Indraprastha World School</h3>
 </div>
@@ -808,7 +874,7 @@
 <div class="resume-list b-box p-4 mb-4 " >
 <div>
 <h5><i>Senior Secondary</i></h5>
-<h6 class="badge badge-danger d-inline-block my-3">2016-2017</h6> <span class="ml-3"><a href="#">vist website</a></span>
+<h6 class="badge badge-danger d-inline-block my-3">2016-2017</h6> <span class="ml-3"><a target="blank" href="https://www.indraprasthaschool.com/">vist website</a></span>
 <hr>
 <h3>Indraprastha World School</h3>
 </div>
@@ -819,7 +885,7 @@
 <div class="resume-list b-box p-4 mb-4 " >
 <div>
 <h5><i>Undergraduation, BTech (CSE)</i></h5>
-<h6 class="badge badge-danger d-inline-block my-3">2017 - Present</h6> <span class="ml-3"><a href="#">vist website</a></span>
+<h6 class="badge badge-danger d-inline-block my-3">2017 - Present</h6> <span class="ml-3"><a target="blank" href="#">vist website</a></span>
 <hr>
 <h3>Manav Rachna University, Faridabad</h3>
 </div>
@@ -830,7 +896,7 @@
 <div class="resume-list b-box p-4 mb-4 " >
 <div>
 <h5><i>Visiting Scholar</i></h5>
-<h6 class="badge badge-danger d-inline-block my-3">Present</h6> <span class="ml-3"><a href="#">vist website</a></span>
+<h6 class="badge badge-danger d-inline-block my-3">Present</h6> <span class="ml-3"><a target="blank" href="#">vist website</a></span>
 <hr>
 <h3>University of California, Berkeley</h3>
 </div>
@@ -841,9 +907,14 @@
 <div class="resume-list b-box p-4 mb-4 " >
 <div>
 <h5><i>Garwood Fellow</i></h5>
-<h6 class="badge badge-danger d-inline-block my-3">Present</h6> <span class="ml-3"><a href="#">vist website</a></span>
+<h6 class="badge badge-danger d-inline-block my-3">Present</h6> <span class="ml-3"><a target="blank" href="https://corporateinnovation.berkeley.edu/executives/garwood-innovation-fellow/">vist website</a></span>
 <hr>
 <h3>Haas Business School, University of California, Berkeley</h3>
+<p>Yashraj plans to use insights from his research on open innovation strategies practiced by Silicon Valley R&D
+    departments within large firms to strengthen India’s manufacturing base to move India towards a more innovative
+    future. Yashraj’s research will be backed by corporate firms, government entities, and highly connected family
+    businesses—including royal families. His firm has offices and operations across the globe that specialize in
+    Research and Consulting for the development of prototypes and IP marketplaces.</p>
 </div>
 </div>
 </div>
