--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
 <div class="col-3 col-md-3 pb-3 pb-md-0">
-<img src="assets/images/c-10.png">	
+<img src="assets/images/c-10.jpg">	
 </div>
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Advisor, Rebuilding India Initiative</i></h5>
