--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </div>
 <div class="hero-right mt-5 mt-md-0 text-center " data-wow-delay="300ms">
 <h1>Yashraj Bhardwaj</h1>
-<h5 class="mt-2">Co-Founder - Zenith Vipers Group , Petonic Infotech & Partner - Ensure Equity</h5>
+<h5 class="mt-2">Co-Founder - Petonic Infotech & Partner - Ensure Equity</h5>
 <div class="hero-right--btns my-4">
 <a href="assets/cv/Yashraj_Bhardwaj_VisualCV_Resume.pdf" target="blank" class="btn ripple">Download CV</a>
 <a href="#about" class="btn btn-link">About Me</a>
@@ -168,6 +168,8 @@
 <div class="col-md-6">
 <div class="section-about--img wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
 <img class="img-fluid mx-auto d-block" src="assets/images/avatar.jpg" alt="About Picture">
+<p class="mt-4 font-weight-light">22 | Entrepreneur | Karamveer Chakra | Delegate at UN | TEDx Speaker | Padma Shri Nominee |Forbes Under30 | Delhi-Dubai-Hong Kong | Garwood Fellow, UC Berkeley | Advisory, UC Berkeley - NITI Aayog Industry Advisory Council | Member, National Innovation Startup Policy, Ministry of Education, India
+</p>
 </div>
 </div>
 
@@ -175,20 +177,10 @@
 <div class="about-desc">
 <div class="about-desc-content text-justify">
 <h2>About Me</h2>
-<p class="mt-4 font-weight-light">Yashraj Bhardwaj and his brother Yuvraj Bhardwaj are researchers, ideators and entrepreneurs 36 
-    Research Projects and 15 patent applications that they have filed in a team. They are also the recipients of Karmaveer Chakra 
-    Award 2016 and have also been named amongst top 10 young entrepreneurs of 2016 across the globe by by success magazine.They 
-    were finalist of SF fellowship worth $250000 and winners of $100000. They were also proud nominee of Padma Shri 2018, one
-     of the highest civilian award in India. Also winner of many international and national awards and have also been into 
-     Forbes 30 Under 30 Asia List 2018. Yashraj and Yuvraj reside in Delhi and Dubai and are very closely connected with 
-     the latest in technology and innovation around the world, with very close association with innovation powerhouses
-      like Silicon Valley giants, TED, Venture Firms and Technology Clusters around the world. The main business is related
-       to Problem Solving. They have been working a lot with various state, market and societies and basically have been 
-       doing deep down research and finding patents based solutions for such problems. Right now around 150 researchers 
-       are associated with the companies and nearly all of them are without degrees. They are headquartered in Delhi and
-        Dubai, and have offices in Hong Kong, etc. Yashraj is also selected as Garwood Fellow at UC Berkeley. He is a
-         Visiting scholar there and working on concept of ‘Open Innovation’. One of interesting fact is that he is the
-          Youngest person ever for this fellowship wherein nobody less than ‘PhD’ is ever selected.</p>
+<p class="mt-4 font-weight-light"> Yashraj Bhardwaj and his brother Yuvraj Bhardwaj are researchers, ideators and entrepreneurs with 36 research projects and 15 patent applications filed under their names. They are also the recipients of the 2016 Karamveer Chakra Award and have been named amongst the Top 10 Global Young Entrepreneurs of 2016 by Success Magazine. Yashraj and Yuvraj won $100,000 as the finalists of the San Francisco Fellowship - a program valuing $250,000 in total. They were also the proud nominees of Padma Shri 2018, one of the highest civilian awards in India. The two have won numerous esteemed international and national accolades, while also ranking the Forbes 30 Under 30 Asia List in 2018. Yashraj and Yuvraj reside in Delhi and Dubai and work closely with the latest technologies around the world in collaboration with investors and innovators from Silicon Valley, TED, venture capital firms and technology clusters panning across the globe. Their main business is focused on consulting advisory and the provision of innovative solutions to clients. Their founding company, Petonic Infotech, works closely with various states, markets and societies by performing bottom-up research and finding patent-based solutions for their problems. As firm supporters of research without barriers, they have ensured that approximately 150 researchers are associated with their companies and nearly all of them do not hold a degree. Headquartered in Delhi and Dubai, Petonic Infotech is expanding rapidly on a global platform with additional offices in Hong Kong. 
+    
+    
+    Yashraj has been selected as a Garwood Fellow at UC Berkeley, where he is currently serving as a Visiting Scholar and working on the concept of ‘Open Innovation’. Although this esteemed accolade is exclusively awarded to select individuals who usually hold a PhD degree, Yashraj is the youngest person to have attained this fellowship in history. He is also an advisor to the Berkeley-NITI Aayog Industry Advisory Council. Yashraj’s research includes open innovation strategies practiced by Silicon Valley R&D departments within large firms. His objective is to strengthen India’s manufacturing base and propel India towards the digital age.</p>
 </div>
 
 <ul class="about-desc-social text-left my-4 list-unstyled list-inline">
@@ -608,6 +600,21 @@
 
 <div class="col-lg-9">
 <div class="ExperienceList pb-3">
+
+<div class="resume-list b-box p-2 " >
+<div class="row align-items-center">
+<div class="col-3 col-md-3 pb-3 pb-md-0">
+<img src="assets/images/c-11.jpg">	
+</div>
+<div class="col-md-6 pb-2 pb-md-0">
+<h5 class="mb-2"><i>Board Member</i></h5>
+<h3 class="">NISP, Ministry of Education, Govt. of India</h3>
+<a target="blank" href="https://nisp.mic.gov.in/">visit website</a>
+</div>
+<div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
+
+</div>
+</div>
 
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
@@ -1263,7 +1270,7 @@ foundries, factories that produce metal castings.</p>
 <i class="lni-envelope"></i>
 </div>
 <div class="mt-2">
-<a href="mailto: ceo@petonic.in"> ceo@petonic.in </a>
+<a href="mailto: yashraj.bhardwaj@petonic.in">  yashraj.bhardwaj@petonic.in </a>
 <p class="mt-2">Email Us</p>
 </div>
 </div>
