--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 <div class="col-md-6">
 <div class="section-about--img wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-<img class="img-fluid mx-auto d-block" src="assets/images/avatar.jpg" alt="About Picture">
+<img class="img-fluid mx-auto d-block" src="assets/images/avatar2.jpeg" alt="About Picture">
 <p class="mt-4 font-weight-light">22 | Entrepreneur | Karamveer Chakra | Delegate at UN | TEDx Speaker | Padma Shri Nominee |Forbes Under30 | Delhi-Dubai-Hong Kong | Garwood Fellow, UC Berkeley | Advisory, UC Berkeley - NITI Aayog Industry Advisory Council | Member, National Innovation Startup Policy, Ministry of Education, India
 </p>
 </div>
