--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <div class="col-md-6">
 <div class="section-about--img wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
 <img class="img-fluid mx-auto d-block" src="assets/images/avatar2.jpeg" alt="About Picture">
-<p class="mt-4 font-weight-light">24 | Entrepreneur | Karamveer Chakra | Delegate at UN | TEDx Speaker | Padma Shri Nominee |Forbes Under30 | Delhi-Dubai-Hong Kong | Garwood Fellow, UC Berkeley | Advisory, UC Berkeley - NITI Aayog Industry Advisory Council | Member, National Innovation Startup Policy, Ministry of Education, India
+<p class="mt-4 font-weight-bold text-justify">24 | Entrepreneur | Karamveer Chakra | Delegate at UN | TEDx Speaker | Padma Shri Nominee |Forbes Under30 | Delhi-Dubai-Hong Kong | Garwood Fellow, UC Berkeley | Advisory, UC Berkeley - NITI Aayog Industry Advisory Council | Member, National Innovation Startup Policy, Ministry of Education, India
 </p>
 </div>
 </div>
@@ -234,30 +234,38 @@
 
 <div class="counter-wrapper b-box mt-0 mt-md-5">
 <div class="row">
-<div class="col-4 col-md-4">
+<div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">36</span>
+<span class="counter">20+</span>
 </h3>
-<p class="mt-4">Research Projects</p>
+<p class="mt-4">Companies</p>
 </div>
 </div>
-<div class="col-4 col-md-4">
+<div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">15</span>
+<span class="counter">07+</span>
 </h3>
-<p class="mt-4">Total Patent A	pplications</p>
+<p class="mt-4">Countries</p>
 </div>
 </div>
-<div class="col-4 col-md-4">
+<div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">15</span>+
+<span class="counter">50+</span>
 </h3>
-<p class="mt-4">Total Awards</p>
+<p class="mt-4">Awards</p>
 </div>
 </div>
+<div class="col-3 col-md-3">
+<div class="counter-text my-4 m-md-5 text-center">
+<h3>
+<span class="counter">18+</span>
+</h3>
+<p class="mt-4">Patents</p>
+</div>
+</div>  
 
 </div>
 </div> 
