--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <div class="about-desc">
 <div class="about-desc-content text-justify">
 <h2>About Me</h2>
-<p class="mt-4 font-weight-light"> I am 24 years old Entrepreneur from India. Running businesses across 7 countries including US, Singapore, Hong Kong, China etc. Started working at age of 14, I have 18 patents on my name along with a group of 26 companies. Have been conferred Karmaveer Chakra, been a Delegate at UN, TEDx Speaker ,Padma Shri Nominee ,Forbes Under 30. Also a Garwood Fellow, UC Berkeley. On the Board of UC Berkeley - NITI Aayog Industry Advisory Council and Member, National Innovation Startup Policy, Ministry of Education, India</p></div>
+<p class="mt-4 font-weight-light"> I am 24 years old Entrepreneur from India. Running businesses across 7 countries including US, Singapore, Hong Kong, China etc. Started working at age of 14, I have 18 patents on my name along with a group of 26 companies. Have been conferred Karmaveer Chakra, been a Delegate at UN, TEDx Speaker ,Padma Shri Nominee ,Forbes Under 30. Also a Garwood Fellow, UC Berkeley. On the Board of UC Berkeley - NITI Aayog Industry Advisory Council and Member, National Innovation Startup Policy, Ministry of Education, India.</p></div>
 
 <ul class="about-desc-social text-left my-4 list-unstyled list-inline">
 <li class="list-inline-item"><a class="hover-state" href="https://www.facebook.com/yashrajbhardwaj.bhardwaj" target="blank"><i class="lni lni-facebook"></i></a></li>
@@ -237,7 +237,7 @@
 <div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">20+</span>
+<span class="counter">20</span><span>+</span>
 </h3>
 <p class="mt-4">Companies</p>
 </div>
@@ -245,7 +245,7 @@
 <div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">07+</span>
+<span class="counter">07</span><span>+</span>
 </h3>
 <p class="mt-4">Countries</p>
 </div>
@@ -253,7 +253,7 @@
 <div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">50+</span>
+<span class="counter">50</span><span>+</span>
 </h3>
 <p class="mt-4">Awards</p>
 </div>
@@ -261,7 +261,7 @@
 <div class="col-3 col-md-3">
 <div class="counter-text my-4 m-md-5 text-center">
 <h3>
-<span class="counter">18+</span>
+<span class="counter">18</span><span>+</span>
 </h3>
 <p class="mt-4">Patents</p>
 </div>
