--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -788,7 +788,7 @@ foundries, factories that produce metal castings.</p>
     businesses thrive. Our aim of uplifting the benchmark of work environment in India
     and abroad while ensuring the client's expectations are met which allows them to
     focus on their core business.</p>
-<a target="blank" href="http://www.incuspaze.com/">visit website</a>
+<a target="blank" href="https://www.incuspaze.com/">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2016 - 2017</h6></div>
 
@@ -818,7 +818,7 @@ foundries, factories that produce metal castings.</p>
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Investor, Advisor</i></h5>
 <h3 class="">Space India</h3>
-<a target="blank" href="http://www.space-india.com/">visit website</a>
+<a target="blank" href="https://www.space-india.com/">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2017 - Present</h6></div>
 
@@ -848,7 +848,7 @@ foundries, factories that produce metal castings.</p>
 <div class="col-md-6 pb-2 pb-md-0">
 <h5 class="mb-2"><i>Investor, Technical Advisor</i></h5>
 <h3 class="">Insta Printz</h3>
-<a target="blank" href="http://www.instaprintz.in/">visit website</a>
+<a target="blank" href="https://www.instaprintz.in/">visit website</a>
 </div>
 <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2017 - Present</h6></div>
 
