--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ f<!DOCTYPE html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Yashraj Bhardwaj</title>
-<meta name="description" content="Yashraj Bhardwaj, Co-Founder - Zenith Vipers Group , Workolab & Partner - Ensure Equity LLP" />
+<meta name="description" content="Yashraj Bhardwaj, - Co-Founder - Plannex Recycling, Petonic Infotech & Petonic AI" />
 <meta name="keywords" content="Yashraj, Bhardwaj, Founder, Zenith, Vipers, Workolab, Ensure Equity, blog, portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 <meta name="author" content="Yashraj" />
 <meta name="theme-color" content="#000">
@@ -129,7 +129,7 @@ f<!DOCTYPE html>
 </div>
 <div class="hero-right mt-5 mt-md-0 text-center " data-wow-delay="300ms">
 <h1>Yashraj Bhardwaj</h1>
-<h5 class="mt-2">Co-Founder - Petonic Infotech & Partner - Ensure Equity</h5>
+<h5 class="mt-2">- Co-Founder - Plannex Recycling, Petonic Infotech & Petonic AI</h5>
 <div class="hero-right--btns my-4">
 <a href="assets/cv/Yashraj_Bhardwaj_VisualCV_Resume.pdf" target="blank" class="btn ripple">Download CV</a>
 <a href="#about" class="btn btn-link">About Me</a>
