--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ f<!DOCTYPE html>
 <img class="hero-img img-fluid" src="assets/images/logo.png" alt="About Picture">
 </div>
 <div class="hero-right mt-5 mt-md-0 text-center " data-wow-delay="300ms">
-<h1>Yashraj Bhardwaj</h1>
+<h1>Yashraj Bhardwaj B</h1>
 <h5 class="mt-2">Co-Founder - Plannex Recycling, Petonic Infotech & Petonic AI</h5>
 <div class="hero-right--btns my-4">
 <a href="assets/cv/Yashraj_Bhardwaj_VisualCV_Resume.pdf" target="blank" class="btn ripple">Download CV</a>
