--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ f<!DOCTYPE html>
 <div class="row justify-content-center align-items-center  h-100vh">
 <div class="col-md-8 text-center">
 <div class="hero-img-wrap mb-2">
-<img class="hero-img img-fluid" src="assets/images/logo.png" alt="About Picture">
+<img class="hero-img img-fluid" src="assets/images/logo.jpeg" alt="About Picture">
 </div>
 <div class="hero-right mt-5 mt-md-0 text-center " data-wow-delay="300ms">
 <h1>Yashraj Bhardwaj</h1>
