--- a/index.html
+++ b/index.html
@@ -605,6 +605,24 @@ f<!DOCTYPE html>
 <div class="col-lg-9">
 <div class="ExperienceList pb-3">
 
+    <div class="resume-list b-box p-2 " >
+        <div class="row align-items-center">
+        <div class="col-3 col-md-3 pb-3 pb-md-0">
+        <img src="assets/images/c-13.jpg">	
+        </div>
+        <div class="col-md-6 pb-2 pb-md-0">
+        <h5 class="mb-2"><i>Co-Founder</i></h5>
+        <h3 class="">Plannex Recycling</h3>
+        <p class="text-justify">Plannex Recycling is a forward-thinking company dedicated to transforming waste management through sustainable and innovative solutions. 
+            Specializing in Extended Producer Responsibility (EPR) compliance, it help businesses effectively manage their product lifecycle and environmental impact. 
+            With a focus on recycling, waste collection, and resource recovery, Plannex currently is recycling Approx. 250,000 MT waste annually.</p>
+        <a target="blank" href="https://www.petonic.in/">visit website</a>
+        </div>
+        <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2018 - Present</h6></div>
+        
+        </div>
+        </div>
+
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
 <div class="col-3 col-md-3 pb-3 pb-md-0">
@@ -1275,6 +1293,7 @@ foundries, factories that produce metal castings.</p>
 </div>
 <div class="mt-2">
 <a href="mailto: yashraj.bhardwaj@petonic.in">  yashraj.bhardwaj@petonic.in </a>
+<a href="mailto: yashraj.bhardwaj@plannex.in">  yashraj.bhardwaj@plannex.in </a>
 <p class="mt-2">Email Us</p>
 </div>
 </div>
