--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ f<!DOCTYPE html>
             With a focus on recycling, waste collection, and resource recovery, Plannex currently is recycling Approx. 250,000 MT waste annually.</p>
         <a target="blank" href="https://www.petonic.in/">visit website</a>
         </div>
-        <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">2018 - Present</h6></div>
+        <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
         
         </div>
         </div>
