--- a/index.html
+++ b/index.html
@@ -616,12 +616,27 @@ f<!DOCTYPE html>
         <p class="text-justify">Plannex Recycling is a forward-thinking company dedicated to transforming waste management through sustainable and innovative solutions. 
             Specializing in Extended Producer Responsibility (EPR) compliance, it help businesses effectively manage their product lifecycle and environmental impact. 
             With a focus on recycling, waste collection, and resource recovery, Plannex currently is recycling Approx. 250,000 MT waste annually.</p>
-        <a target="blank" href="https://www.petonic.in/">visit website</a>
+        <a target="blank" href="https://plannex.in/">visit website</a>
         </div>
         <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
         
         </div>
         </div>
+        <div class="resume-list b-box p-2 " >
+            <div class="row align-items-center">
+            <div class="col-3 col-md-3 pb-3 pb-md-0">
+            <img src="assets/images/c-12.jpg">	
+            </div>
+            <div class="col-md-6 pb-2 pb-md-0">
+            <h5 class="mb-2"><i>Co-Founder</i></h5>
+            <h3 class="">Petonic AI Recycling</h3>
+            <p class="text-justify">Reshaping the consulting landscape by harnessing AI to deliver innovative, efficient, and data-driven solutions that empower businesses to navigate complex challenges and achieve sustainable growth.</p>
+            <a target="blank" href="https://www.petonic.ai/">visit website</a>
+            </div>
+            <div class="col-md-3 text-md-right"><h6 class="badge badge-primary mr-3">Present</h6></div>
+            
+            </div>
+            </div>
 
 <div class="resume-list b-box p-2 " >
 <div class="row align-items-center">
