--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ f<!DOCTYPE html>
             </div>
             <div class="col-md-6 pb-2 pb-md-0">
             <h5 class="mb-2"><i>Co-Founder</i></h5>
-            <h3 class="">Petonic AI Recycling</h3>
+            <h3 class="">Petonic AI</h3>
             <p class="text-justify">Reshaping the consulting landscape by harnessing AI to deliver innovative, efficient, and data-driven solutions that empower businesses to navigate complex challenges and achieve sustainable growth.</p>
             <a target="blank" href="https://www.petonic.ai/">visit website</a>
             </div>
